--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-/* make scroll smaller */
+/* make scrollbar thiner  */
 ::-webkit-scrollbar {
-  width: 0.25rem;
-  height: 4px;
+  width: 5px;
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
 }
